--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "luxon": "^1.25.0",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.3.0",
+    "netlify-plugin-inline-functions-env": "^1.0.9",
     "node-fetch": "^2.6.1",
     "stripe": "^8.199.0"
   },
