--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
   },
   "homepage": "https://github.com/11ty/eleventy-base-blog#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^0.11.1",
-    "@11ty/eleventy-plugin-rss": "^1.0.9",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.3",
+    "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy-plugin-rss": "^1.1.2",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
     "luxon": "^1.25.0",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.3.0",
-    "node-fetch": "^2.6.1"
+    "netlify-plugin-inline-functions-env": "^1.0.9",
+    "node-fetch": "^2.6.1",
+    "stripe": "^8.199.0"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
+    "aws-sdk": "^2.1063.0",
     "lodash": "^4.17.20"
   }
 }
